--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutter_svg: ^2.1.0
   google_fonts: ^6.2.1
+  equatable: ^2.0.5
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
