--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   equatable: ^2.0.5
   http: ^1.4.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
