--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,16 @@ dependencies:
   equatable: ^2.0.5
   http: ^1.4.0
   shared_preferences: ^2.2.2
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/emcus_app_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
