--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.4.0
   shared_preferences: ^2.2.2
   flutter_launcher_icons: ^0.14.4
+  socket_io_client: ^2.0.3
 
 dev_dependencies:
   flutter_test:
