--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_launcher_icons: ^0.14.4
   socket_io_client: ^2.0.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
