--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   socket_io_client: ^2.0.3
   intl: ^0.20.2
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
