--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   socket_io_client: ^2.0.3
   intl: ^0.20.2
   get_it: ^8.0.3
+  pinput: ^5.0.1
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
